# homework-36

./: CMakeLists.txt  button.cpp
qt res+/: CMakeLists.txt  button.cpp  img.qrc  qrc_img.cpp
qt resource/: CMakeLists.txt  button.cpp  img.qrc
